--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>kelvimarcos</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
@@ -11,7 +11,9 @@
     <header class="header">
 
     <h1> Kelvimarcos</h1>    
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, enim. </p>
+    <p>Lorem ipsum dolor sit amet 
+        <br>
+        consectetur adipisicing elit. Ab, enim. </p>
     
     </header>
 
@@ -31,7 +33,7 @@
 
 </section>
 
-<footer> kelvison marcos @ Copywrite </footer>
+<footer> kelvison marcos &copy; Copyright </footer>
 
     
 </body>
