--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
     <section class="box">
 
-    <div class="link1"><a href="">Link1</a></div>
+    <div class="link1"><a href="#"></a></div>
 
 
-    <div class="link2"><a href="">Link1</a></div>
+    <div class="link2"><a href="#"></a></div>
 
 
-    <div class="link3"><a href="">Link1</a></div>
+    <div class="link3"><a href="#"></a></div>
 
 
-    <div class="link4"><a href="">Link1</a></div>
+    <div class="link4"><a href="#"></a></div>
 
 </section>
 
